Updated code to reflect new API (graders still do not compile)